--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -3,10 +3,15 @@
         <div class="about__row">
             <div class="about__content">
                 <h2 class="title-2">About Us</h2>
-                <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a sapien justo. Nulla facilisis tristique imperdiet. Nullam a placerat odio. Sed in ex augue. Aliquam porta consectetur lorem sit amet ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a sapien
+                    justo. Nulla facilisis tristique imperdiet. Nullam a placerat odio. Sed in ex augue. Aliquam porta
+                    consectetur lorem sit amet ultrices. Class aptent taciti sociosqu ad litora torquent per conubia
+                    nostra, per inceptos himenaeos.</p>
                 <a href="#!" class="title-view">
                     <h3>Read more</h3>
-                    <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    <div class="title-view__img">
+                        <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    </div>
                 </a>
             </div>
             <div class="about__img">
