--- a/src/html/blocks/hotels.html
+++ b/src/html/blocks/hotels.html
@@ -5,7 +5,9 @@
                 <h2 class="title-2">Hotels and Restaurants</h2>
                 <a href="#!" class="title-view">
                     <h3>View all</h3>
-                    <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    <div class="title-view__img">
+                        <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    </div>
                 </a>
             </div>
             <div class="hotels__content">
