--- a/src/html/blocks/travel.html
+++ b/src/html/blocks/travel.html
@@ -5,7 +5,9 @@
                 <h2 class="title-2">Travel Tips and Advice</h2>
                 <a href="#!" class="title-view">
                     <h3>View all</h3>
-                    <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    <div class="title-view__img">
+                        <img src="./img/icons/arrow-more.svg" alt="arrow-more">
+                    </div>
                 </a>
             </div>
             <div class="travel__content">
@@ -15,7 +17,9 @@
                     </div>
                     <div class="travel__card-content">
                         <h3 class="content__title">East Village Ice Cream Crawl</h3>
-                        <h4 class="content__subtitle">We will stop at five different world-class ice cream shops on this 1.5 mile 1.5 hour tour. At each ice cream store we'll explore the story behind the business and see what makes the ice cream unique as you savor every…</h4>
+                        <h4 class="content__subtitle">We will stop at five different world-class ice cream shops on this
+                            1.5 mile 1.5 hour tour. At each ice cream store we'll explore the story behind the business
+                            and see what makes the ice cream unique as you savor every…</h4>
                         <div class="content__info">
                             <div class="info__day">
                                 <img src="./img/icons/calendar-gray.svg" alt="calendar">
@@ -38,7 +42,9 @@
                     </div>
                     <div class="travel__card-content">
                         <h3 class="content__title">Brooklyn Bridge cinematic photo walk</h3>
-                        <h4 class="content__subtitle">This experience takes place at the Brooklyn Bridge Park and Brooklyn Bridge, but I’m always open to capture clients at different locations upon request for an additional charge.</h4>
+                        <h4 class="content__subtitle">This experience takes place at the Brooklyn Bridge Park and
+                            Brooklyn Bridge, but I’m always open to capture clients at different locations upon request
+                            for an additional charge.</h4>
                         <div class="content__info">
                             <div class="info__day">
                                 <img src="./img/icons/calendar-gray.svg" alt="calendar">
